Corregir extensiones de audio de mp3 a wav para el deploy

--- a/index.html
+++ b/index.html
@@ -53,12 +53,11 @@ class PreloadScene extends Phaser.Scene {
     this.load.image('trash', 'basura1.png');
     this.load.image('trash_alt', 'basura2.png');
 
-    this.load.audio('collect', 'collect.mp3'); 
-    this.load.audio('hit', 'hit.mp3');         
-    this.load.audio('click', 'click.mp3');     
-    this.load.audio('gameOver', 'gameover.mp3'); 
-    this.load.audio('bgm', 'bgm.mp3'); 
-  }
+   this.load.audio('collect', 'collect.wav'); 
+    this.load.audio('hit', 'hit.wav');         
+    this.load.audio('gameOver', 'gameover.wav'); 
+    this.load.audio('bgm', 'bgm.wav'); 
+  }
 
   create() {
     sfx = {
