--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     }
 
     canvas {
+      /* Esto ayuda a que el canvas se estire de forma responsiva */
+      width: 100%;
+      height: 100%;
+      max-width: 480px; 
+      max-height: 800px;
+      
       border: 4px solid #ff6a00;
       box-shadow: 0 0 25px #ff00ff, 0 0 50px #ff6a00;
       border-radius: 12px;
@@ -53,7 +59,6 @@ class PreloadScene extends Phaser.Scene {
     this.load.image('trash', 'basura1.png');
     this.load.image('trash_alt', 'basura2.png');
 
-    // Corregido a .wav
     this.load.audio('collect', 'collect.wav'); 
     this.load.audio('hit', 'hit.wav');         
     this.load.audio('gameOver', 'gameover.wav'); 
@@ -66,7 +71,7 @@ class PreloadScene extends Phaser.Scene {
       hit: this.sound.add('hit', { volume: 0.6 }),
       gameOver: this.sound.add('gameOver', { volume: 0.7 })
     };
-    // Eliminada la referencia a 'click' de aquí
+
     bgm = this.sound.add('bgm', { loop: true, volume: 0.4 });
     
     this.sound.unlock();
@@ -122,8 +127,6 @@ class MainMenu extends Phaser.Scene {
     });
 
     startButton.on('pointerdown', () => {
-      // Eliminada la referencia a sfx.click.play(); 
-
       if (bgm && !bgm.isPlaying) {
         bgm.play();
       }
@@ -131,8 +134,6 @@ class MainMenu extends Phaser.Scene {
       this.cameras.main.fadeOut(400, 0, 0, 0);
       this.time.delayedCall(400, () => this.scene.start('GameScene'));
     });
-
-    // Código del botón SALIR eliminado.
   }
 }
 
@@ -285,13 +286,11 @@ class GameOver extends Phaser.Scene {
     }).setOrigin(0.5);
 
     this.createButton(config.width / 2, 360, 'REINTENTAR', 0xff6a00, () => {
-      // Eliminada la referencia a sfx.click.play(); 
       this.scene.stop('GameOver');
       this.scene.start('GameScene');
     });
 
     this.createButton(config.width / 2, 440, 'MENÚ PRINCIPAL', 0xff00ff, () => {
-      // Eliminada la referencia a sfx.click.play(); 
       this.scene.stop('GameOver');
       this.scene.stop('GameScene'); 
       this.scene.start('MainMenu');
@@ -314,7 +313,7 @@ class GameOver extends Phaser.Scene {
 }
 
 // ============================
-// CONFIGURACIÓN PHASER (CORREGIDA LA ESCALA)
+// CONFIGURACIÓN PHASER (USANDO SCALE.NONE PARA CSS RESPONSIVO)
 // ============================
 const config = {
   type: Phaser.AUTO,
@@ -322,8 +321,7 @@ const config = {
   height: 800,
   parent: 'game-container',
   scale: {
-    mode: Phaser.Scale.FIT, // Usamos FIT para que se ajuste, evitando el recorte
-    autoCenter: Phaser.Scale.CENTER_BOTH,
+    mode: Phaser.Scale.NONE, // Le dice a Phaser que no escale
     width: 480,
     height: 800
   },
