--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
     }
 
     canvas {
-      /* Esto ayuda a que el canvas se estire de forma responsiva */
-      width: 100%;
-      height: 100%;
-      max-width: 480px; 
-      max-height: 800px;
+      /* CORRECCIÓN FINAL: Esto asegura que el canvas se ajusta al 100% del contenedor en móvil, sin recortar. */
+      width: 100% !important; 
+      height: 100% !important;
       
       border: 4px solid #ff6a00;
       box-shadow: 0 0 25px #ff00ff, 0 0 50px #ff6a00;
@@ -59,7 +57,8 @@ class PreloadScene extends Phaser.Scene {
     this.load.image('trash', 'basura1.png');
     this.load.image('trash_alt', 'basura2.png');
 
-    this.load.audio('collect', 'collect.wav'); 
+    // Extensiones corregidas a .wav
+   this.load.audio('collect', 'collect.wav'); 
     this.load.audio('hit', 'hit.wav');         
     this.load.audio('gameOver', 'gameover.wav'); 
     this.load.audio('bgm', 'bgm.wav'); 
@@ -69,6 +68,7 @@ class PreloadScene extends Phaser.Scene {
     sfx = {
       collect: this.sound.add('collect', { volume: 0.5 }),
       hit: this.sound.add('hit', { volume: 0.6 }),
+      // sfx.click eliminado
       gameOver: this.sound.add('gameOver', { volume: 0.7 })
     };
 
@@ -127,6 +127,8 @@ class MainMenu extends Phaser.Scene {
     });
 
     startButton.on('pointerdown', () => {
+      // sfx.click.play() fue eliminado
+
       if (bgm && !bgm.isPlaying) {
         bgm.play();
       }
@@ -134,6 +136,8 @@ class MainMenu extends Phaser.Scene {
       this.cameras.main.fadeOut(400, 0, 0, 0);
       this.time.delayedCall(400, () => this.scene.start('GameScene'));
     });
+
+    // El botón SALIR fue eliminado
   }
 }
 
@@ -286,11 +290,13 @@ class GameOver extends Phaser.Scene {
     }).setOrigin(0.5);
 
     this.createButton(config.width / 2, 360, 'REINTENTAR', 0xff6a00, () => {
+      // sfx.click.play() fue eliminado
       this.scene.stop('GameOver');
       this.scene.start('GameScene');
     });
 
     this.createButton(config.width / 2, 440, 'MENÚ PRINCIPAL', 0xff00ff, () => {
+      // sfx.click.play() fue eliminado
       this.scene.stop('GameOver');
       this.scene.stop('GameScene'); 
       this.scene.start('MainMenu');
@@ -313,7 +319,7 @@ class GameOver extends Phaser.Scene {
 }
 
 // ============================
-// CONFIGURACIÓN PHASER (USANDO SCALE.NONE PARA CSS RESPONSIVO)
+// CONFIGURACIÓN PHASER FINAL
 // ============================
 const config = {
   type: Phaser.AUTO,
@@ -321,7 +327,8 @@ const config = {
   height: 800,
   parent: 'game-container',
   scale: {
-    mode: Phaser.Scale.NONE, // Le dice a Phaser que no escale
+    // CORRECCIÓN FINAL: Usamos NONE para que el CSS maneje el escalado, eliminando el recorte.
+    mode: Phaser.Scale.NONE, 
     width: 480,
     height: 800
   },
