--- a/index.html
+++ b/index.html
@@ -305,16 +305,17 @@ class GameOver extends Phaser.Scene {
 // ============================
 const config = {
   type: Phaser.AUTO,
+  parent: 'game-container',
   width: 480,
   height: 800,
-  parent: 'game-container',
-  scale: { // ✅ CORREGIDO
+  scale: {
     mode: Phaser.Scale.FIT,
-    autoCenter: Phaser.Scale.CENTER_BOTH,
-    min: { width: 320, height: 480 },
-    max: { width: 720, height: 1280 }
+    autoCenter: Phaser.Scale.CENTER_BOTH
   },
-  physics: { default: 'arcade', arcade: { gravity: { y: 350 }, debug: false } },
+  physics: {
+    default: 'arcade',
+    arcade: { gravity: { y: 350 }, debug: false }
+  },
   scene: [PreloadScene, MainMenu, GameScene, GameOver]
 };
 
